src/test/ui/enum-generic-args.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:9:25
   |
LL |         Self::Variant::<()>(());
   |                         ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:11:16
   |
LL |         Self::<()>::Variant(());
   |                ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:13:16
   |
LL |         Self::<()>::Variant::<()>(());
   |                ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:13:31
   |
LL |         Self::<()>::Variant::<()>(());
   |                               ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:20:27
   |
LL |     Enum::<()>::Variant::<()>(());
   |                           ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:23:22
   |
LL |     Alias::Variant::<()>(());
   |                      ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:25:28
   |
LL |     Alias::<()>::Variant::<()>(());
   |                            ^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:28:27
   |
LL |     AliasFixed::Variant::<()>(());
   |                           ^^ type parameter not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-generic-args.rs:30:18
   |
LL |     AliasFixed::<()>::Variant(());
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-generic-args.rs:32:18
   |
LL |     AliasFixed::<()>::Variant::<()>(());
   |                  ^^ unexpected type argument

error[E0109]: type parameters are not allowed on this type
  --> $DIR/enum-generic-args.rs:32:33
   |
LL |     AliasFixed::<()>::Variant::<()>(());
   |                                 ^^ type parameter not allowed

error: aborting due to 11 previous errors

Some errors occurred: E0107, E0109.
For more information about an error, try `rustc --explain E0107`.
